--- a/Readme
+++ b/Readme
@@ -1,1 +1,20 @@
-tastybite-iota.vercel.app
+# TastyBite
+
+TastyBite is a responsive restaurant menu and food delivery website built with HTML, CSS, and JavaScript.  
+Users can browse the menu, add items to their cart, and place delivery orders online.
+
+Live Demo: [https://tastybite-iota.vercel.app](https://tastybite-iota.vercel.app)
+
+## Tech Stack
+- HTML  
+- CSS  
+- JavaScript  
+- Deployed on Vercel
+
+## Run Locally
+git clone https://github.com/yourusername/tastybite.git  
+cd tastybite  
+open index.html
+
+## Author
+Developed by [chandru](https://github.com/chandru-webdev)
